==> QuantumLeaps/qpc/examples/arm/qk/iar/dpp-qk-lpc-p213x/bsp.c <==
#include "qp_port.h"
#include "dpp.h"
#include "bsp.h"
#include <iolpc2138.h>      /* IAR-compiler header file for the LPC2138 I/O */
#include "lpc_data_type.h"
#include "drv_hd44780.h"
#include "drv_hd44780_cnfg.h"
#define FOSC              14745600
#define CCLK              (FOSC*4)
#define PCLK              CCLK

__arm void QF_onStartup(void) {
                            /* hook the exception handlers from the QF port */
    *(uint32_t volatile *)0x24 = (uint32_t)&QF_undef;
    *(uint32_t volatile *)0x28 = (uint32_t)&QF_swi;
    *(uint32_t volatile *)0x2C = (uint32_t)&QF_pAbort;
    *(uint32_t volatile *)0x30 = (uint32_t)&QF_dAbort;
    *(uint32_t volatile *)0x34 = (uint32_t)&QF_reserved;

    *(uint32_t volatile *)0x38 = (uint32_t)&QK_irq;
    *(uint32_t volatile *)0x3C = (uint32_t)&QK_fiq;

    VICIntSelect = 0x0;        /* assign all interrupts to the IRQ category */

    /* Setting up Timer0 to handle the external interrupt.
    * Timer0 has priorty 0 (highest)
    */
    VICVectCntl0 = 0x25;
    VICVectAddr0 = (uint32_t)&ISR_tick;
    VICIntEnable = (1 << 5);                    /* enable TIMER 1 interrupt */

    /* Setting up VIC to handle the external interrupt.
    * External Interrupt1 has priorty 1
    */
    VICVectCntl1 = 0x2F;
    VICVectAddr1 = (uint32_t)&ISR_ext;

    /*  set up the spurious interrupt handler */
    VICDefVectAddr = (uint32_t)&ISR_spur;

    T1TCR = 0x1;                                         /* start the timer */
}

void BSP_init(void) {
    VICIntEnClear = ~0x0;               /* initially disable all interrupts */

    /* Initialize GIO ... */
    PINSEL0 = 0;
    PINSEL1 = 0;
    IO0SET = 0x87FE01F1;
    IO0CLR = ~0x87FE01F1;
    IO0DIR = 0x0001FF0F;
    IO1SET = 0xFFFFFFFF;
    IO1CLR = ~0xFFFFFFFF;
    IO1DIR = 0x00000000;

    /* External interrupts setup as level-sensitive.
    * Some of the steps mentioned here are taking into considertaion
    * the EXTINT.2 Errata
    */
    EXTINT   = 0x2;
    VPBDIV   = 0x0;
    EXTMODE  = 0x0;
    VPBDIV   = 0x0;
    EXTPOLAR = 0x0;
    VPBDIV   = 0x0;

    /* Initialize Timer 1 ... */
    T1TCR = 0x0;
    T1TC  = 0x0;
    T1PR  = PCLK / (BSP_TICKS_PER_SEC * (1 << 14)) - 1;        /* prescaler */
    T1PC  = 0x0;
    T1MR0 = (1 << 14);                                   /* the match value */
    T1MCR = 0x3;                            /* reset and interrupt on match */

    VPBDIV = 1;             /* set peripheral (PCLK) to System (CCLK) clock */

    /* initialize the LCD and the backlight */
    HD44780_PowerUpInit();                       /* HD44780 LCD driver init */
    LightInit();                                          /* Backlight Init */
    LightCntr(LIGHT_FAST, LIGHT_ON);

    HD44780_StrShow((HD44780_XY_DEF)1, (HD44780_XY_DEF)1, "Quantum Leaps");
    HD44780_StrShow((HD44780_XY_DEF)1, (HD44780_XY_DEF)2, "0 ,1 ,2 ,3 ,4  ");

    BSP_randomSeed(1234);

    if (QS_INIT((void *)0) == 0) {    /* initialize the QS software tracing */
        Q_ERROR();
    }
    QS_RESET();
    QS_OBJ_DICTIONARY(&l_ISR_tick);
}

void BSP_displayPhilStat(uint8_t n, char const *stat) {
    HD44780_CharShow((HD44780_XY_DEF)(3*n + 2), (HD44780_XY_DEF)2, stat[0]);

    QS_BEGIN(PHILO_STAT, AO_Philo[n])  /* application-specific record begin */
        QS_U8(1, n);                                  /* Philosopher number */
        QS_STR(stat);                                 /* Philosopher status */
    QS_END()
}

uint8_t QS_onStartup(void const *arg) {
    static uint8_t qsBuf[QS_BUF_SIZE];                     /* buffer for QS */
    QS_initBuf(qsBuf, sizeof(qsBuf));

                                                 /* setup the QS filters... */
    QS_FILTER_ON(QS_ALL_RECORDS);

//    QS_FILTER_OFF(QS_QEP_STATE_EMPTY);
//    QS_FILTER_OFF(QS_QEP_STATE_ENTRY);
//    QS_FILTER_OFF(QS_QEP_STATE_EXIT);
//    QS_FILTER_OFF(QS_QEP_STATE_INIT);
//    QS_FILTER_OFF(QS_QEP_INIT_TRAN);
//    QS_FILTER_OFF(QS_QEP_INTERN_TRAN);
//    QS_FILTER_OFF(QS_QEP_TRAN);
//    QS_FILTER_OFF(QS_QEP_dummyD);

    QS_FILTER_OFF(QS_QF_ACTIVE_ADD);
    QS_FILTER_OFF(QS_QF_ACTIVE_REMOVE);
    QS_FILTER_OFF(QS_QF_ACTIVE_SUBSCRIBE);
    QS_FILTER_OFF(QS_QF_ACTIVE_UNSUBSCRIBE);
    QS_FILTER_OFF(QS_QF_ACTIVE_POST_FIFO);
    QS_FILTER_OFF(QS_QF_ACTIVE_POST_LIFO);
    QS_FILTER_OFF(QS_QF_ACTIVE_GET);
    QS_FILTER_OFF(QS_QF_ACTIVE_GET_LAST);
    QS_FILTER_OFF(QS_QF_EQUEUE_INIT);
    QS_FILTER_OFF(QS_QF_EQUEUE_POST_FIFO);
    QS_FILTER_OFF(QS_QF_EQUEUE_POST_LIFO);
    QS_FILTER_OFF(QS_QF_EQUEUE_GET);
    QS_FILTER_OFF(QS_QF_EQUEUE_GET_LAST);
    QS_FILTER_OFF(QS_QF_MPOOL_INIT);
    QS_FILTER_OFF(QS_QF_MPOOL_GET);
    QS_FILTER_OFF(QS_QF_MPOOL_PUT);
    QS_FILTER_OFF(QS_QF_PUBLISH);
    QS_FILTER_OFF(QS_QF_NEW);
    QS_FILTER_OFF(QS_QF_GC_ATTEMPT);
    QS_FILTER_OFF(QS_QF_GC);
//    QS_FILTER_OFF(QS_QF_TICK);
    QS_FILTER_OFF(QS_QF_TIMEEVT_ARM);
    QS_FILTER_OFF(QS_QF_TIMEEVT_AUTO_DISARM);
    QS_FILTER_OFF(QS_QF_TIMEEVT_DISARM_ATTEMPT);
    QS_FILTER_OFF(QS_QF_TIMEEVT_DISARM);
    QS_FILTER_OFF(QS_QF_TIMEEVT_REARM);
    QS_FILTER_OFF(QS_QF_TIMEEVT_POST);
    QS_FILTER_OFF(QS_QF_CRIT_ENTRY);
    QS_FILTER_OFF(QS_QF_CRIT_EXIT);
    QS_FILTER_OFF(QS_QF_ISR_ENTRY);
    QS_FILTER_OFF(QS_QF_ISR_EXIT);

    return UART_config(115200UL);
}

void QS_onFlush(void) {
    uint16_t nBytes = 16;              /* the capacity of the UART0 TX FIFO */
    uint8_t const *block;
    while ((block = QS_getBlock(&nBytes)) != (uint8_t *)0) {
        while (U0LSR_bit.THRE == 0) {                 /* TX FIFO not empty? */
        }                                                /* keep waiting... */
        while (nBytes-- != 0) {
            U0THR = *block++;              /* stick the byte to the TX FIFO */
        }
        nBytes = 16;                            /* for the next time around */
    }
}

QSTimeCtr QS_onGetTime(void) {
    static QSTimeCtr l_lastTime;
    QSTimeCtr now = l_tickTime + T1TC;

    if (l_lastTime > now) {                 /* are we going "back" in time? */
        now += (CCLK / (32 * BSP_TICKS_PER_SEC));    /* assume one rollover */
    }
    l_lastTime = now;

    return now;
}
